# SRend

./: .clang-format  .gitmodules
apps/test/: CMakeLists.txt  main.cpp
apps/test/shaders/: ui.vert
libs/: CMakeLists.txt
modules/: CMakeLists.txt
modules/render/: CMakeLists.txt
modules/render/include/render/: core.hpp
modules/render/source/core/: utils.cpp  utils.hpp
modules/render/source/core/Camera/: Camera.cpp  Camera.hpp
modules/render/source/core/Collection/: Collection.cpp  Collection.hpp
modules/render/source/core/Gui/: Gui.cpp  Gui.hpp
modules/render/source/core/Light/: Light.cpp  Light.hpp
modules/render/source/core/Material/: Material.cpp  Material.hpp
modules/render/source/core/MaterialData/: MaterialData.cpp  MaterialData.hpp
modules/render/source/core/Mesh/: Mesh.cpp  Mesh.hpp
modules/render/source/core/Object/: Object.cpp  Object.hpp
modules/render/source/core/Presenter/: Presenter.cpp  Presenter.hpp
modules/render/source/core/Render/: Render.cpp  Render.hpp
modules/render/source/core/Scene/: Scene.cpp  Scene.hpp
modules/render/source/core/Texture/: Texture.cpp  Texture.hpp
modules/utils/source/Allocator/: Allocator.cpp  Allocator.hpp  AllocatorImpl.hpp  AllocatorPolitics.cpp  AllocatorPolitics.hpp
modules/utils/source/AnyPtr/: AnyPtr.hpp
modules/utils/source/Version/: Version.hpp
modules/utils/source/debug/: Messenger.cpp  Messenger.hpp  MessengerCallbacks.cpp
modules/utils/source/flagsUtils/: BitFlags.hpp  flagsUtils.hpp
modules/utils/source/signals/: signals.hpp
modules/utils/source/stringUtils/: stringUtils.cpp  stringUtils.hpp
modules/utils/source/utilTypes/: utilTypes.hpp
modules/vulkan/: CMakeLists.txt
modules/vulkan/include/vulkan/: core.hpp  presentation.hpp
modules/vulkan/source/: utils.cpp  utils.hpp
modules/vulkan/source/core/Application/: Application.cpp  Application.hpp  ApplicationImpl.cpp  ApplicationImpl.hpp
modules/vulkan/source/core/Buffer/: Buffer.cpp  Buffer.hpp  BufferImpl.cpp  BufferImpl.hpp
modules/vulkan/source/core/ColorBlendState/: ColorBlendState.cpp  ColorBlendState.hpp
modules/vulkan/source/core/CommandBuffer/: CommandBuffer.cpp  CommandBuffer.hpp  CommandBufferImpl.cpp  CommandBufferImpl.hpp
modules/vulkan/source/core/DepthStencilState/: DepthStencilState.cpp  DepthStencilState.hpp
modules/vulkan/source/core/Device/: BufferManager.cpp  BufferManager.hpp  Device.cpp  Device.hpp  DeviceImpl.cpp  DeviceImpl.hpp
modules/vulkan/source/core/Framebuffer/: Framebuffer.cpp  Framebuffer.hpp
modules/vulkan/source/core/Image/: Image.cpp  Image.hpp  ImageImpl.cpp  ImageImpl.hpp
modules/vulkan/source/core/InputAssemblyState/: InputAssemblyState.cpp  InputAssemblyState.hpp
modules/vulkan/source/core/MultisampleState/: MultisampleState.cpp  MultisampleState.hpp
modules/vulkan/source/core/PhysicalDevice/: PhysicalDevice.cpp  PhysicalDevice.hpp  PhysicalDeviceImpl.cpp  PhysicalDeviceImpl.hpp
modules/vulkan/source/core/Pipeline/: Pipeline.cpp  Pipeline.hpp  PipelineImpl.cpp  PipelineImpl.hpp
modules/vulkan/source/core/RasterizationState/: RasterizationState.cpp  RasterizationState.hpp
modules/vulkan/source/core/RenderPass/: RenderPass.cpp  RenderPass.hpp
modules/vulkan/source/core/Sampler/: Sampler.cpp  Sampler.hpp  SamplerImpl.cpp  SamplerImpl.hpp
modules/vulkan/source/core/Semaphore/: Semaphore.hpp  SemaphoreImpl.cpp  SemaphoreImpl.hpp
modules/vulkan/source/core/Shader/: Shader.cpp  Shader.hpp  ShaderImpl.cpp  ShaderImpl.hpp
modules/vulkan/source/core/ShaderState/: ShaderState.cpp  ShaderState.hpp
modules/vulkan/source/core/VertexInputState/: VertexInputState.cpp  VertexInputState.hpp
modules/vulkan/source/core/ViewportState/: ViewportState.cpp  ViewportState.hpp
modules/vulkan/source/core/vertex_input_format/: vertex_input_format.cpp  vertex_input_format.hpp  vertex_input_format_t.cpp  vertex_input_format_t.hpp
modules/vulkan/source/presentation/Device/: Device.cpp  Device.hpp
modules/vulkan/source/presentation/RenderWindow/: RenderWindow.cpp  RenderWindow.hpp
modules/vulkan/source/presentation/surface/: surface.cpp  surface_t.hpp
modules/vulkan/source/presentation/swapchain/: swapchain.cpp  swapchain.hpp  swapchain_t.cpp  swapchain_t.hpp
modules/wsystem/: CMakeLists.txt
modules/wsystem/source/Manager/: BaseManager.hpp  Manager.cpp
modules/wsystem/source/Window/: BaseWindow.hpp  Window.cpp  Window.hpp  WindowImpl.hpp
modules/wsystem/source/sdl/: SDLManager.cpp  SdlManager.hpp  SdlWindow.cpp  SdlWindow.hpp
(+2 files in other folders)
